--- a/CallesSuperMegaRPG/MainWindow.xaml
+++ b/CallesSuperMegaRPG/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CallesSuperMegaRPG"
         mc:Ignorable="d"
+        FontSize="11pt"
         Title="Calle's Super Mega RPG" Height="768" Width="1024">
     <Grid>
         <Grid.RowDefinitions>
@@ -66,6 +67,10 @@
                     </Grid.RowDefinitions>
 
                     <TextBlock Grid.Row="0" HorizontalAlignment="Center" Text="{Binding CurrentLocation.Name}"/>
+                    
+                    <Image Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"
+                           Height="125" Width="125" Source="{Binding CurrentLocation.ImageName}"/>
+
                     <TextBlock Grid.Row="2" HorizontalAlignment="Center" Text="{Binding CurrentLocation.Description}"/>
                 </Grid>
             </Border>
