--- a/CallesSuperMegaRPG/MainWindow.xaml
+++ b/CallesSuperMegaRPG/MainWindow.xaml
@@ -1,109 +1,209 @@
-﻿<Window x:Class="CallesSuperMegaRPG.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CallesSuperMegaRPG"
-        mc:Ignorable="d"
-        FontSize="11pt"
-        Title="Calle's Super Mega RPG" Height="768" Width="1024">
+﻿<Window
+    x:Class="CallesSuperMegaRPG.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:CallesSuperMegaRPG"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Calle's Super Mega RPG"
+    Width="1024"
+    Height="768"
+    FontSize="11pt"
+    mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="225"></RowDefinition>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="225" />
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="250"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="250" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Menu" Background="AliceBlue"></Label>
-        <Grid Grid.Row="1" Grid.Column="0" Background="Aquamarine">
+        <Label
+            Grid.Row="0"
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            Background="AliceBlue"
+            Content="Menu" />
+        <Grid
+            Grid.Row="1"
+            Grid.Column="0"
+            Background="Aquamarine">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
-            <Label Grid.Row="0" Grid.Column="0" Content="Name:"/>
-            <Label Grid.Row="0" Grid.Column="1" Content="{Binding CurrentPlayer.Name}"/>
-            <Label Grid.Row="1" Grid.Column="0" Content="Class:"/>
-            <Label Grid.Row="1" Grid.Column="1" Content="{Binding CurrentPlayer.CharacterClass}"/>
-            <Label Grid.Row="2" Grid.Column="0" Content="Hit points:"/>
-            <Label Grid.Row="2" Grid.Column="1" Content="{Binding CurrentPlayer.HitPoints}"/>
-            <Label Grid.Row="3" Grid.Column="0" Content="Gold:"/>
-            <Label Grid.Row="3" Grid.Column="1" Content="{Binding CurrentPlayer.Gold}"/>
-            <Label Grid.Row="4" Grid.Column="0" Content="XP:"/>
-            <Label Grid.Row="4" Grid.Column="1" Content="{Binding CurrentPlayer.ExperiencePoints}"/>
-            <Label Grid.Row="5" Grid.Column="0" Content="Level:"/>
-            <Label Grid.Row="5" Grid.Column="1" Content="{Binding CurrentPlayer.Level}"/>
+            <Label
+                Grid.Row="0"
+                Grid.Column="0"
+                Content="Name:" />
+            <Label
+                Grid.Row="0"
+                Grid.Column="1"
+                Content="{Binding CurrentPlayer.Name}" />
+            <Label
+                Grid.Row="1"
+                Grid.Column="0"
+                Content="Class:" />
+            <Label
+                Grid.Row="1"
+                Grid.Column="1"
+                Content="{Binding CurrentPlayer.CharacterClass}" />
+            <Label
+                Grid.Row="2"
+                Grid.Column="0"
+                Content="Hit points:" />
+            <Label
+                Grid.Row="2"
+                Grid.Column="1"
+                Content="{Binding CurrentPlayer.HitPoints}" />
+            <Label
+                Grid.Row="3"
+                Grid.Column="0"
+                Content="Gold:" />
+            <Label
+                Grid.Row="3"
+                Grid.Column="1"
+                Content="{Binding CurrentPlayer.Gold}" />
+            <Label
+                Grid.Row="4"
+                Grid.Column="0"
+                Content="XP:" />
+            <Label
+                Grid.Row="4"
+                Grid.Column="1"
+                Content="{Binding CurrentPlayer.ExperiencePoints}" />
+            <Label
+                Grid.Row="5"
+                Grid.Column="0"
+                Content="Level:" />
+            <Label
+                Grid.Row="5"
+                Grid.Column="1"
+                Content="{Binding CurrentPlayer.Level}" />
         </Grid>
-        <Grid Grid.Row="1" Grid.Column="1" Background="Beige">
+        <Grid
+            Grid.Row="1"
+            Grid.Column="1"
+            Background="Beige">
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="3*"/>
-                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="3*" />
+                <ColumnDefinition Width="2*" />
             </Grid.ColumnDefinitions>
-            <Border Grid.Row="0" Grid.Column="1" BorderBrush="Gainsboro" BorderThickness="1">
+            <Border
+                Grid.Row="0"
+                Grid.Column="1"
+                BorderBrush="Gainsboro"
+                BorderThickness="1">
                 <Grid Margin="3">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
-                    <TextBlock Grid.Row="0" HorizontalAlignment="Center" Text="{Binding CurrentLocation.Name}"/>
-                    
-                    <Image Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"
-                           Height="125" Width="125" Source="{Binding CurrentLocation.ImageName}"/>
+                    <TextBlock
+                        Grid.Row="0"
+                        HorizontalAlignment="Center"
+                        Text="{Binding CurrentLocation.Name}" />
 
-                    <TextBlock Grid.Row="2" HorizontalAlignment="Center" Text="{Binding CurrentLocation.Description}"/>
+                    <Image
+                        Grid.Row="1"
+                        Width="125"
+                        Height="125"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Source="{Binding CurrentLocation.ImageName}" />
+
+                    <TextBlock
+                        Grid.Row="2"
+                        HorizontalAlignment="Center"
+                        Text="{Binding CurrentLocation.Description}" />
                 </Grid>
             </Border>
         </Grid>
-        <Label Grid.Row="2" Grid.Column="0" Content="Inventory/Quests" Background="BurlyWood"></Label>
-        <Grid Grid.Row="2" Grid.Column="1" Background="Lavender">
+        <Label
+            Grid.Row="2"
+            Grid.Column="0"
+            Background="BurlyWood"
+            Content="Inventory/Quests" />
+        <Grid
+            Grid.Row="2"
+            Grid.Column="1"
+            Background="Lavender">
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="255"/>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="255" />
             </Grid.ColumnDefinitions>
 
             <Grid Grid.Row="0" Grid.Column="1">
 
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
 
-                <Button Grid.Row="0" Grid.Column="1" Height="40" Width="65" Margin="10" Content="North"/>
-                <Button Grid.Row="1" Grid.Column="0" Height="40" Width="65" Margin="10" Content="West"/>
-                <Button Grid.Row="1" Grid.Column="2" Height="40" Width="65" Margin="10" Content="East"/>
-                <Button Grid.Row="2" Grid.Column="1" Height="40" Width="65" Margin="10" Content="South"/>
+                <Button
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Width="65"
+                    Height="40"
+                    Margin="10"
+                    Click="OnClick_MoveNorth"
+                    Content="North" />
+                <Button
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Width="65"
+                    Height="40"
+                    Margin="10"
+                    Click="OnClick_MoveWest"
+                    Content="West" />
+                <Button
+                    Grid.Row="1"
+                    Grid.Column="2"
+                    Width="65"
+                    Height="40"
+                    Margin="10"
+                    Click="OnClick_MoveEast"
+                    Content="East" />
+                <Button
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    Width="65"
+                    Height="40"
+                    Margin="10"
+                    Click="OnClick_MoveSouth"
+                    Content="South" />
             </Grid>
         </Grid>
 
