--- a/CallesSuperMegaRPG/MainWindow.xaml
+++ b/CallesSuperMegaRPG/MainWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<Window
-    x:Class="CSMRPG_UI.MainWindow"
+    x:Class="CallesSuperMegaRPG.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,6 +10,11 @@
     Height="768"
     FontSize="11pt"
     mc:Ignorable="d">
+
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibility" />
+    </Window.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -179,6 +184,7 @@
                     Height="40"
                     Margin="10"
                     Click="OnClick_MoveNorth"
+                    Visibility="{Binding HasLocationToNorth, Converter={StaticResource BooleanToVisibility}}"
                     Content="North" />
                 <Button
                     Grid.Row="1"
@@ -187,6 +193,7 @@
                     Height="40"
                     Margin="10"
                     Click="OnClick_MoveWest"
+                    Visibility="{Binding HasLocationToWest, Converter={StaticResource BooleanToVisibility}}"
                     Content="West" />
                 <Button
                     Grid.Row="1"
@@ -195,6 +202,7 @@
                     Height="40"
                     Margin="10"
                     Click="OnClick_MoveEast"
+                    Visibility="{Binding HasLocationToEast, Converter={StaticResource BooleanToVisibility}}"
                     Content="East" />
                 <Button
                     Grid.Row="2"
@@ -203,6 +211,7 @@
                     Height="40"
                     Margin="10"
                     Click="OnClick_MoveSouth"
+                    Visibility="{Binding HasLocationToSouth, Converter={StaticResource BooleanToVisibility}}"
                     Content="South" />
             </Grid>
         </Grid>
