--- a/CallesSuperMegaRPG/MainWindow.xaml
+++ b/CallesSuperMegaRPG/MainWindow.xaml
@@ -151,8 +151,20 @@
             Background="BurlyWood">
             <TabControl>
                 <TabItem Header="Inventory">
-                    <DataGrid ItemsSource="{Binding CurrentPlayer.Inventory}">
-
+                    <DataGrid
+                        AutoGenerateColumns="False"
+                        HeadersVisibility="Column"
+                        ItemsSource="{Binding CurrentPlayer.Inventory}">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn
+                                Width="*"
+                                Binding="{Binding Name}"
+                                Header="Description" />
+                            <DataGridTextColumn
+                                Width="Auto"
+                                Binding="{Binding Price}"
+                                Header="Price" />
+                        </DataGrid.Columns>
                     </DataGrid>
                 </TabItem>
             </TabControl>
@@ -191,8 +203,8 @@
                     Height="40"
                     Margin="10"
                     Click="OnClick_MoveNorth"
-                    Visibility="{Binding HasLocationToNorth, Converter={StaticResource BooleanToVisibility}}"
-                    Content="North" />
+                    Content="North"
+                    Visibility="{Binding HasLocationToNorth, Converter={StaticResource BooleanToVisibility}}" />
                 <Button
                     Grid.Row="1"
                     Grid.Column="0"
@@ -200,8 +212,8 @@
                     Height="40"
                     Margin="10"
                     Click="OnClick_MoveWest"
-                    Visibility="{Binding HasLocationToWest, Converter={StaticResource BooleanToVisibility}}"
-                    Content="West" />
+                    Content="West"
+                    Visibility="{Binding HasLocationToWest, Converter={StaticResource BooleanToVisibility}}" />
                 <Button
                     Grid.Row="1"
                     Grid.Column="2"
@@ -209,8 +221,8 @@
                     Height="40"
                     Margin="10"
                     Click="OnClick_MoveEast"
-                    Visibility="{Binding HasLocationToEast, Converter={StaticResource BooleanToVisibility}}"
-                    Content="East" />
+                    Content="East"
+                    Visibility="{Binding HasLocationToEast, Converter={StaticResource BooleanToVisibility}}" />
                 <Button
                     Grid.Row="2"
                     Grid.Column="1"
@@ -218,8 +230,8 @@
                     Height="40"
                     Margin="10"
                     Click="OnClick_MoveSouth"
-                    Visibility="{Binding HasLocationToSouth, Converter={StaticResource BooleanToVisibility}}"
-                    Content="South" />
+                    Content="South"
+                    Visibility="{Binding HasLocationToSouth, Converter={StaticResource BooleanToVisibility}}" />
             </Grid>
         </Grid>
 
