--- a/CallesSuperMegaRPG/MainWindow.xaml
+++ b/CallesSuperMegaRPG/MainWindow.xaml
@@ -6,10 +6,10 @@
     xmlns:local="clr-namespace:CallesSuperMegaRPG"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModels="clr-namespace:Engine.ViewModels;assembly=Engine"
-    d:DataContext="{d:DesignInstance viewModels:GameSession}"
     Title="Calle's Super Mega RPG"
     Width="1024"
     Height="768"
+    d:DataContext="{d:DesignInstance viewModels:GameSession}"
     FontSize="11pt"
     mc:Ignorable="d">
 
@@ -119,17 +119,20 @@
                 <ColumnDefinition Width="2*" />
             </Grid.ColumnDefinitions>
 
-            <!-- Game Messages -->
-            <Border Grid.Row="0" Grid.Column="0"
-                    Grid.RowSpan="2"
-                    BorderBrush="Gainsboro"
-                    BorderThickness="1">
-                <RichTextBox x:Name="GameMessages"
-                             Background="Beige"
-                             VerticalScrollBarVisibility="Auto">
+            <!--  Game Messages  -->
+            <Border
+                Grid.Row="0"
+                Grid.RowSpan="2"
+                Grid.Column="0"
+                BorderBrush="Gainsboro"
+                BorderThickness="1">
+                <RichTextBox
+                    x:Name="GameMessages"
+                    Background="Beige"
+                    VerticalScrollBarVisibility="Auto">
                     <RichTextBox.Resources>
                         <Style TargetType="{x:Type Paragraph}">
-                            <Setter Property="Margin" Value="0"/>
+                            <Setter Property="Margin" Value="0" />
                         </Style>
                     </RichTextBox.Resources>
                 </RichTextBox>
@@ -199,7 +202,7 @@
                         HorizontalAlignment="Center"
                         Orientation="Horizontal"
                         Visibility="{Binding HasMonster, Converter={StaticResource BooleanToVisibility}}">
-                        <TextBlock>Current Hit Points: </TextBlock>
+                        <TextBlock>Current Hit Points:</TextBlock>
                         <TextBlock Text="{Binding CurrentMonster.HitPoints}" />
                     </StackPanel>
                 </Grid>
