--- a/CallesSuperMegaRPG/MainWindow.xaml
+++ b/CallesSuperMegaRPG/MainWindow.xaml
@@ -16,19 +16,16 @@
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibility" />
     </Window.Resources>
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="225" />
         </Grid.RowDefinitions>
-
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="250" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-
         <!--  Menu  -->
         <Label
             Grid.Row="0"
@@ -36,8 +33,7 @@
             Grid.ColumnSpan="2"
             Background="AliceBlue"
             Content="Menu" />
-
-        <!--  Gameplay  -->
+        <!--  Player stats  -->
         <Grid
             Grid.Row="1"
             Grid.Column="0"
@@ -49,13 +45,12 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
-
             <Label
                 Grid.Row="0"
                 Grid.Column="0"
@@ -105,6 +100,7 @@
                 Grid.Column="1"
                 Content="{Binding CurrentPlayer.Level}" />
         </Grid>
+        <!--  Gameplay  -->
         <Grid
             Grid.Row="1"
             Grid.Column="1"
@@ -113,12 +109,10 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="3*" />
                 <ColumnDefinition Width="2*" />
             </Grid.ColumnDefinitions>
-
             <!--  Game Messages  -->
             <Border
                 Grid.Row="0"
@@ -136,9 +130,7 @@
                         </Style>
                     </RichTextBox.Resources>
                 </RichTextBox>
-
             </Border>
-
             <!--  Location information  -->
             <Border
                 Grid.Row="0"
@@ -151,12 +143,10 @@
                         <RowDefinition Height="*" />
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
-
                     <TextBlock
                         Grid.Row="0"
                         HorizontalAlignment="Center"
                         Text="{Binding CurrentLocation.Name}" />
-
                     <Image
                         Grid.Row="1"
                         Width="125"
@@ -164,14 +154,13 @@
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
                         Source="{Binding CurrentLocation.ImageName}" />
-
                     <TextBlock
                         Grid.Row="2"
                         HorizontalAlignment="Center"
-                        Text="{Binding CurrentLocation.Description}" />
+                        Text="{Binding CurrentLocation.Description}"
+                        TextWrapping="Wrap" />
                 </Grid>
             </Border>
-
             <!--  Monster information  -->
             <Border
                 Grid.Row="1"
@@ -184,7 +173,6 @@
                         <RowDefinition Height="*" />
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
-
                     <TextBlock
                         Grid.Row="0"
                         Height="Auto"
@@ -208,6 +196,7 @@
                 </Grid>
             </Border>
         </Grid>
+        <!--  Inventory and Quests  -->
         <Grid
             Grid.Row="2"
             Grid.Column="0"
@@ -243,12 +232,13 @@
                             <DataGridTextColumn
                                 Width="Auto"
                                 Binding="{Binding IsCompleted}"
-                                Header="Completed" />
+                                Header="Done?" />
                         </DataGrid.Columns>
                     </DataGrid>
                 </TabItem>
             </TabControl>
         </Grid>
+        <!--  Action controls  -->
         <Grid
             Grid.Row="2"
             Grid.Column="1"
@@ -256,26 +246,51 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="255" />
             </Grid.ColumnDefinitions>
-
+            <!--  Combat Controls  -->
+            <Grid
+                Grid.Row="0"
+                Grid.Column="0"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Visibility="{Binding HasMonster, Converter={StaticResource BooleanToVisibility}}">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="150" />
+                    <ColumnDefinition Width="10" />
+                    <ColumnDefinition Width="50" />
+                </Grid.ColumnDefinitions>
+                <ComboBox
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    DisplayMemberPath="Name"
+                    ItemsSource="{Binding CurrentPlayer.Weapons}"
+                    SelectedItem="{Binding CurrentWeapon}"
+                    SelectedValuePath="ID" />
+                <Button
+                    Grid.Row="0"
+                    Grid.Column="2"
+                    Click="OnClick_AttackMonster"
+                    Content="Use" />
+            </Grid>
+            <!--  Movement Controls  -->
             <Grid Grid.Row="0" Grid.Column="1">
-
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-
                 <Button
                     Grid.Row="0"
                     Grid.Column="1"
@@ -314,6 +329,5 @@
                     Visibility="{Binding HasLocationToSouth, Converter={StaticResource BooleanToVisibility}}" />
             </Grid>
         </Grid>
-
     </Grid>
 </Window>
