--- a/CallesSuperMegaRPG/MainWindow.xaml
+++ b/CallesSuperMegaRPG/MainWindow.xaml
@@ -311,6 +311,14 @@
                     Visibility="{Binding HasLocationToWest, Converter={StaticResource BooleanToVisibility}}" />
                 <Button
                     Grid.Row="1"
+                    Grid.Column="1"
+                    Width="65"
+                    Height="40"
+                    Margin="10"
+                    Content="Trade"
+                    Visibility="{Binding HasTrader, Converter={StaticResource BooleanToVisibility}}" />
+                <Button
+                    Grid.Row="1"
                     Grid.Column="2"
                     Width="65"
                     Height="40"
