--- a/CallesSuperMegaRPG/MainWindow.xaml
+++ b/CallesSuperMegaRPG/MainWindow.xaml
@@ -212,10 +212,10 @@
                                 Width="*"
                                 Binding="{Binding Item.Name}"
                                 Header="Description" />
-                            <DataGridTextColumn 
-                                Header="Qty"
+                            <DataGridTextColumn
                                 Width="Auto"
-                                Binding="{Binding Quantity}"/>
+                                Binding="{Binding Quantity}"
+                                Header="Qty" />
                             <DataGridTextColumn
                                 Width="Auto"
                                 Binding="{Binding Item.Price}"
@@ -319,9 +319,9 @@
                     Width="65"
                     Height="40"
                     Margin="10"
-                    Content="Trade"
                     Click="OnClick_DisplayTradeScreen"
-                Visibility="{Binding HasTrader, Converter={StaticResource BooleanToVisibility}}" />
+                    Content="Trade"
+                    Visibility="{Binding HasTrader, Converter={StaticResource BooleanToVisibility}}" />
                 <Button
                     Grid.Row="1"
                     Grid.Column="2"
