Started modifying view to support WASD movement control of player

--- a/CallesSuperMegaRPG/MainWindow.xaml
+++ b/CallesSuperMegaRPG/MainWindow.xaml
@@ -11,7 +11,8 @@
     Height="768"
     d:DataContext="{d:DesignInstance viewModels:GameSession}"
     FontSize="11pt"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    KeyDown="MainWindow_OnKeyDown">
 
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibility" />
