Fixed bux with key-press bindings in View

--- a/CallesSuperMegaRPG/MainWindow.xaml
+++ b/CallesSuperMegaRPG/MainWindow.xaml
@@ -211,15 +211,15 @@
                         <DataGrid.Columns>
                             <DataGridTextColumn
                                 Width="*"
-                                Binding="{Binding Item.Name}"
+                                Binding="{Binding Item.Name, Mode=OneWay}"
                                 Header="Description" />
                             <DataGridTextColumn
                                 Width="Auto"
-                                Binding="{Binding Quantity}"
+                                Binding="{Binding Quantity, Mode=OneWay}"
                                 Header="Qty" />
                             <DataGridTextColumn
                                 Width="Auto"
-                                Binding="{Binding Item.Price}"
+                                Binding="{Binding Item.Price, Mode=OneWay}"
                                 Header="Price" />
                         </DataGrid.Columns>
                     </DataGrid>
@@ -232,11 +232,11 @@
                         <DataGrid.Columns>
                             <DataGridTextColumn
                                 Width="*"
-                                Binding="{Binding PlayerQuest.Name}"
+                                Binding="{Binding PlayerQuest.Name, Mode=OneWay}"
                                 Header="Name" />
                             <DataGridTextColumn
                                 Width="Auto"
-                                Binding="{Binding IsCompleted}"
+                                Binding="{Binding IsCompleted, Mode=OneWay}"
                                 Header="Done?" />
                         </DataGrid.Columns>
                     </DataGrid>
@@ -248,7 +248,7 @@
                         <DataGrid.Columns>
                             <DataGridTextColumn
                                 Width="*"
-                                Binding="{Binding Name}"
+                                Binding="{Binding Name, Mode=OneWay}"
                                 Header="Name" />
                             <DataGridTemplateColumn MinWidth="75">
                                 <DataGridTemplateColumn.CellTemplate>
