--- a/CallesSuperMegaRPG/App.xaml
+++ b/CallesSuperMegaRPG/App.xaml
@@ -2,7 +2,10 @@
     x:Class="CallesSuperMegaRPG.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:CallesSuperMegaRPG.CustomConverters"
     xmlns:local="clr-namespace:CallesSuperMegaRPG"
     StartupUri="MainWindow.xaml">
-    <Application.Resources />
+    <Application.Resources>
+        <converters:FileToBitmapConverter x:Key="FileToBitmapConverter"/>
+    </Application.Resources>
 </Application>
