Updated MainWindow to use BitMap Converter on monster images

--- a/CallesSuperMegaRPG/MainWindow.xaml
+++ b/CallesSuperMegaRPG/MainWindow.xaml
@@ -185,7 +185,7 @@
                         Height="125"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
-                        Source="{Binding CurrentMonster.ImageName}" />
+                        Source="{Binding CurrentMonster.ImageName, Converter={StaticResource FileToBitmapConverter}}" />
                     <StackPanel
                         Grid.Row="2"
                         HorizontalAlignment="Center"
